# MLMSOLUTIONAGENT

./: .env  .env.example  .env.local  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  he.txt  pyproject.toml
docs/: UNIFIED_RAG.md
mlmAgent/: Dockerfile
mlmAgent/src/: agent.py  rag_client.py
scripts/: download_turn_detector_assets.py  smoke_query_rag.py
src/: agent.py  health_server.py  rag_chat.py  rag_client.py
tests/: conftest.py  test_agent.py  test_rag_chat.py
tests_widget/: test_voice_widget_service.py
