[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-starter-python"
version = "1.0.0"
description = "Simple voice AI assistant built with LiveKit Agents for Python"
requires-python = ">=3.9,<3.13"

dependencies = [
    "livekit-agents[google,mcp]>=1.1.2",
    "livekit-plugins-google>=0.1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "llama-index>=0.10.46",
    "llama-index-embeddings-huggingface>=0.1.0",
    "tiktoken>=0.7.0",
    "mixedbread-ai>=2.0.0",
    "angle-emb>=0.1.0",
    "python-dotenv>=1.0",
    "requests>=2.28.0",
    "twilio>=8.0.0",
    "duckduckgo-search>=8.0",
    "tenacity>=8.2.3",
    "aiohttp",
    "huggingface_hub>=0.23,<1.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "fakeredis",
    "pytest-mock",
    "pytest-cov",
    "respx",
    "fastapi",
    "ruff",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "fakeredis",
    "pytest-mock",
    "pytest-cov",
    "respx",
    "fastapi",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
prerelease = "allow"
required-environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'", "sys_platform == 'linux' and platform_machine == 'x86_64'"]
